--- a/site/resources/themes/sunshine.css
+++ b/site/resources/themes/sunshine.css
@@ -79,7 +79,7 @@ a:active, a:hover
   border: 1px solid #666666;
 }
 
-.side-bar-title, .chart-title, .preview-title
+.chart-title, .preview-title
 {
   color: #0044AA;
   border-width: 0px;
