--- a/site/resources/styles/fonts/open-sans.css
+++ b/site/resources/styles/fonts/open-sans.css
@@ -1,6 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700";
 
-body
+body,
 .text-control,
 .menu-control
 {
