--- a/site/resources/themes/crimson.css
+++ b/site/resources/themes/crimson.css
@@ -23,52 +23,35 @@ For more information about the earthli WebCore, visit:
 http://www.earthli.com/software/webcore
 
 ****************************************************************************/
-
-body
-{
-  background-color: #800;
-  color: #EEE;
+body {
+  background-color: #880000;
+  color: #eeeeee;
 }
-
 a:link,
-a:visited
-{
+a:visited {
   color: #c2c274;
 }
-
 a:hover,
-a:active
-{
-  color: #F99;
+a:active {
+  color: #ff9999;
 }
-
-h1
-{
-  color: white;
+h1 {
+  color: #eeeeee;
 }
-
-h2
-{
+h2 {
   color: #d7302b;
   border-color: #d7302b;
 }
-
-h3
-{
+h3 {
   color: #ee4d58;
 }
-
-.banner-title
-{
+.banner-title {
   color: #d7302b;
 }
-
 .chart-title,
-.preview-title
-{
+.preview-title {
   color: #d7302b;
 }
-
 .nav-box,
 .top-box,
 .footer,
@@ -80,11 +63,9 @@ h3
 .info-box-top,
 .info-box-bottom,
 .cell-selected,
-.cell-highlight
-{
+.cell-highlight {
   border-color: #a66f6f;
 }
-
 table.columns > tbody > tr > td,
 table.columns > tbody > tr > th,
 .quote-block,
@@ -94,126 +75,87 @@ pre > code,
 .form-basic-block,
 .abstract,
 .cell-non-empty,
-.pullquote
-{
-  border-color: #A11;
+.pullquote {
+  border-color: #6e0000;
 }
-
 .info-box-top,
-.info-box-bottom
-{
-  color: #987;
+.info-box-bottom,
+.subdued {
+  color: #998877;
 }
-
-.cell-highlight
-{
-  background-color: #600;
+.cell-highlight {
+  background-color: #660000;
 }
-
-.cell-selected
-{
-  background-color: #700;
+.cell-selected {
+  background-color: #770000;
 }
-
 .caution,
 .warning,
-.error
-{
-  color: #765;
+.error {
+  color: #776655;
 }
-
-.caution a:link, .caution a:visited,
-.warning a:link, .warning a:visited,
-.error a:link, .error a:visited
-{
-  color: #66C;
+.caution a:link,
+.caution a:visited,
+.warning a:link,
+.warning a:visited,
+.error a:link,
+.error a:visited {
+  color: #6666cc;
 }
-
-.graph-foreground
-{
+.graph-foreground {
   background-color: #d7302b;
 }
-
-.graph-background
-{
+.highlight {
+  color: #88cc88;
 }
-
-.highlight
-{
-  color: #8C8;
+.selected {
+  color: #ff9999;
 }
-
-.selected
-{
-  color: #F99;
-}
-
 .quote,
 .quote-inline,
-.quote-block
-{
-  color: #CBA;
+.quote-block {
+  color: #ccbbaa;
 }
-
-.button
-{
-  background-color: #700;
+.button {
+  background-color: #770000;
   border-color: #a66f6f;
-  color: #DDD;
+  color: #dddddd;
 }
-
 a.button:link,
-a.button:visited
-{
-  color: #DDD;
+a.button:visited {
+  color: #dddddd;
 }
-
-.button.selected
-{
-  background-color: #B22;
+.button.selected {
+  background-color: #bb2222;
   border-color: #a66f6f;
-  color: #FC0;
+  color: #eeeeee;
 }
-
-.button.disabled
-{
-  background-color: #900;
-  border-color: #7b5252;
-  color: #A77;
+.button.disabled {
+  background-color: #7e0000;
+  border-color: #7c4d4d;
+  color: #998877;
 }
-
-.button:hover:not(.disabled):not(.selected)
-{
-  background-color: #B22;
+.button:hover:not(.disabled):not(.selected) {
+  background-color: #bb2222;
 }
-
-ul.menu
-{
-  background-color: #700;
-  border-color: #987;
+ul.menu {
+  background-color: #770000;
+  border-color: #a66f6f;
 }
-
-ul.menu .menu-group-title
-{
-  background-color: #600;
-  border-color: #987;
+ul.menu .menu-group-title {
+  background-color: #660000;
+  border-color: #a66f6f;
 }
-
-.menu-item:hover
-{
-  background-color: #B22;
-  border-color: #600;
+.menu-item:hover {
+  background-color: #bb2222;
+  border-color: #660000;
 }
-
-.menu-item-description
-{
-  color: #EEC;
+.menu-item-description {
+  color: #eeeeee;
 }
-
 .text-control,
-.menu-control
-{
-  background-color: #933;
-  color: #EEE;
-  border-color: #987;
+.menu-control {
+  background-color: #770000;
+  color: #eeeeee;
+  border-color: #a66f6f;
 }
