Converted a bunch of themes to LESS

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -1169,7 +1169,7 @@ a.button:link, a.button:visited
 
 .warning 
 {
-  background-color: #ebc76d;
+  background-color: #f0d295;
   border-color: #A06000;
 }
 
