--- a/site/resources/themes/shale.less
+++ b/site/resources/themes/shale.less
@@ -1,6 +1,6 @@
 /****************************************************************************
 
-Copyright (c) 2002 Marco Von Ballmoos
+Copyright (c) 2002-2014 Marco Von Ballmoos
 
 This file is part of earthli WebCore.
 
@@ -24,26 +24,26 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@lighter_body_color: #B22;
-@body_color: #800;
-@medium_body_color: darken(@body_color, 2%);
-@darker_body_color: #700;
-@darkest_body_color: #600;
+@lighter_body_color: #5e667b;
+@body_color: #4A525A;
+@medium_body_color: darken(@body_color, 1%);
+@darker_body_color: #434C56;
+@darkest_body_color: #394149;
 
-@light_border: #a66f6f;
-@medium_border: darken(@light_border, 15%);
-@dark_border: #6e0000;
+@light_border: #999;
+@medium_border: darken(@light_border, 10%);
+@dark_border: #666;
 
-@text_color: #EEE;
-@darker_text_color: #CBA;
-@darkest_text_color: #987;
+@text_color: #CCC;
+@darker_text_color: #AAA;
+@darkest_text_color: #888;
 
-@title_color: #d7302b;
-@lighter_title_color: #ee4d58;
+@title_color: #CCC;
+@lighter_title_color: #c7d9ff;
 
-@link_color: #c2c274;
-@darker_link_color: darken(@link_color, 10%);
-@link_hover_color: #F99;
+@link_color: white;
+@darker_link_color: #CCC;
+@link_hover_color: yellow;
 
 @button_text_color: #DDD;
 
@@ -51,6 +51,6 @@ http://www.earthli.com/software/webcore
 @message_box_link_color: #66C;
 
 @highlight_color: #8C8;
-@selected_color: #F99;
+@selected_color: #a1c9ff;
 
 @import "theme-base";
