--- a/site/resources/themes/crimson.css
+++ b/site/resources/themes/crimson.css
@@ -23,3 +23,161 @@ For more information about the earthli WebCore, visit:
 http://www.earthli.com/software/webcore
 
 ****************************************************************************/
+body {
+  background-color: #880000;
+  color: #eeeeee;
+}
+a:link,
+a:visited {
+  color: #c2c274;
+}
+a:hover,
+a:active {
+  color: #ff9999;
+}
+h1 {
+  color: #eeeeee;
+}
+h2 {
+  color: #d7302b;
+  border-color: #d7302b;
+}
+h3 {
+  color: #ee4d58;
+}
+.banner-title {
+  color: #d7302b;
+}
+.chart-title,
+.preview-title {
+  color: #d7302b;
+}
+.nav-box,
+.top-box,
+.footer,
+.horizontal-separator,
+.vertical-separator,
+.left-sidebar,
+.right-sidebar,
+.object-in-list,
+.info-box-top,
+.info-box-bottom,
+.cell-selected,
+.cell-highlight,
+.description-box {
+  border-color: #a66f6f;
+}
+table.columns > tbody > tr > td,
+table.columns > tbody > tr > th,
+.quote-block,
+.preview,
+.chart,
+pre > code,
+.form-basic-block,
+.abstract,
+.cell-non-empty,
+.pullquote {
+  border-color: #6e0000;
+}
+.object-navigator .links {
+  column-rule-color: #a66f6f;
+  -webkit-column-rule-color: #a66f6f;
+  -moz-column-rule-color: #a66f6f;
+}
+.info-box-top,
+.info-box-bottom,
+.subdued {
+  color: #998877;
+}
+.info-box-top a:link,
+.info-box-bottom a:link,
+.subdued a:link,
+.info-box-top a:visited,
+.info-box-bottom a:visited,
+.subdued a:visited {
+  color: #b2b251;
+}
+.info-box-top a:hover,
+.info-box-bottom a:hover,
+.subdued a:hover,
+.info-box-top a:active,
+.info-box-bottom a:active,
+.subdued a:active {
+  color: #ff9999;
+}
+.cell-highlight {
+  background-color: #660000;
+}
+.cell-selected {
+  background-color: #770000;
+}
+.caution,
+.warning,
+.error {
+  color: #776655;
+}
+.caution a:link,
+.caution a:visited,
+.warning a:link,
+.warning a:visited,
+.error a:link,
+.error a:visited {
+  color: #6666cc;
+}
+.graph-foreground {
+  background-color: #d7302b;
+}
+.highlight {
+  color: #88cc88;
+}
+.selected {
+  color: #ff9999;
+}
+.quote,
+.quote-inline,
+.quote-block {
+  color: #ccbbaa;
+}
+.button {
+  background-color: #770000;
+  border-color: #a66f6f;
+  color: #dddddd;
+}
+a.button:link,
+a.button:visited {
+  color: #dddddd;
+}
+.button.selected {
+  background-color: #bb2222;
+  border-color: #a66f6f;
+  color: #eeeeee;
+}
+.button.disabled {
+  background-color: #7e0000;
+  border-color: #7c4d4d;
+  color: #ccbbaa;
+}
+.button:hover:not(.disabled):not(.selected) {
+  background-color: #bb2222;
+}
+ul.menu {
+  background-color: #770000;
+  border-color: #a66f6f;
+}
+ul.menu .menu-group-title {
+  background-color: #660000;
+  border-color: #a66f6f;
+}
+.menu-item:hover {
+  background-color: #bb2222;
+  border-color: #660000;
+}
+.menu-item-description {
+  color: #eeeeee;
+}
+.text-control,
+.menu-control {
+  background-color: #770000;
+  color: #eeeeee;
+  border-color: #a66f6f;
+}
