--- a/site/resources/themes/eggplant.less
+++ b/site/resources/themes/eggplant.less
@@ -1,6 +1,6 @@
 /****************************************************************************
 
-Copyright (c) 2002 Marco Von Ballmoos
+Copyright (c) 2002-2014 Marco Von Ballmoos
 
 This file is part of earthli WebCore.
 
@@ -24,24 +24,24 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@lighter_body_color: #B22;
-@body_color: #800;
-@medium_body_color: darken(@body_color, 2%);
-@darker_body_color: #700;
-@darkest_body_color: #600;
+@lighter_body_color: #646;
+@body_color: #535;
+@medium_body_color: darken(@body_color, 1%);
+@darker_body_color: #4b254b;
+@darkest_body_color: #424;
 
-@light_border: #a66f6f;
-@medium_border: darken(@light_border, 15%);
-@dark_border: #6e0000;
+@light_border: #987;
+@medium_border: darken(@light_border, 10%);
+@dark_border: #987;
 
-@text_color: #EEE;
+@text_color: #EEC;
 @darker_text_color: #CBA;
 @darkest_text_color: #987;
 
-@title_color: #d7302b;
-@lighter_title_color: #ee4d58;
+@title_color: #B9B;
+@lighter_title_color: #979;
 
-@link_color: #c2c274;
+@link_color: #FF9;
 @darker_link_color: darken(@link_color, 10%);
 @link_hover_color: #F99;
 
@@ -51,6 +51,6 @@ http://www.earthli.com/software/webcore
 @message_box_link_color: #66C;
 
 @highlight_color: #8C8;
-@selected_color: #F99;
+@selected_color: #d17b9c;
 
 @import "theme-base";
