--- a/site/resources/themes/emerald.less
+++ b/site/resources/themes/emerald.less
@@ -24,33 +24,33 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@lighter_body_color: #B22;
-@body_color: #800;
-@medium_body_color: darken(@body_color, 2%);
-@darker_body_color: #700;
-@darkest_body_color: #600;
+@lighter_body_color: #4A4;
+@body_color: #050;
+@medium_body_color: darken(@body_color, 1%);
+@darker_body_color: #172;
+@darkest_body_color: #061;
 
-@light_border: #a66f6f;
-@medium_border: darken(@light_border, 15%);
-@dark_border: #6e0000;
+@light_border: #585;
+@medium_border: darken(@light_border, 10%);
+@dark_border: #9DC584;
 
-@text_color: #EEE;
-@darker_text_color: #CBA;
+@text_color: #DED;
+@darker_text_color: #9A9;
 @darkest_text_color: #987;
 
-@title_color: #d7302b;
-@lighter_title_color: #ee4d58;
+@title_color: #9DC584;
+@lighter_title_color: #7D7;
 
-@link_color: #c2c274;
+@link_color: #ADD594;
 @darker_link_color: darken(@link_color, 10%);
-@link_hover_color: #F99;
+@link_hover_color: #ffea62;
 
 @button_text_color: #DDD;
 
 @message_box_text_color: #765;
 @message_box_link_color: #66C;
 
-@highlight_color: #8C8;
-@selected_color: #F99;
+@highlight_color: #ffba00;
+@selected_color: #b5befd;
 
 @import "theme-base";
