--- a/site/resources/themes/slate.less
+++ b/site/resources/themes/slate.less
@@ -1,6 +1,6 @@
 /****************************************************************************
 
-Copyright (c) 2002 Marco Von Ballmoos
+Copyright (c) 2002-2014 Marco Von Ballmoos
 
 This file is part of earthli WebCore.
 
@@ -24,33 +24,33 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@lighter_body_color: #B22;
-@body_color: #800;
-@medium_body_color: darken(@body_color, 2%);
-@darker_body_color: #700;
-@darkest_body_color: #600;
+@lighter_body_color: #444;
+@body_color: #333;
+@medium_body_color: darken(@body_color, 1%);
+@darker_body_color: #666;
+@darkest_body_color: #555;
 
-@light_border: #a66f6f;
-@medium_border: darken(@light_border, 15%);
-@dark_border: #6e0000;
+@light_border: #888;
+@medium_border: darken(@light_border, 10%);
+@dark_border: #444;
 
-@text_color: #EEE;
-@darker_text_color: #CBA;
-@darkest_text_color: #987;
+@text_color: silver;
+@darker_text_color: #AAA;
+@darkest_text_color: #888;
 
-@title_color: #d7302b;
-@lighter_title_color: #ee4d58;
+@title_color: #FC6;
+@lighter_title_color: #ffc31c;
 
-@link_color: #c2c274;
+@link_color: #CC6;
 @darker_link_color: darken(@link_color, 10%);
-@link_hover_color: #F99;
+@link_hover_color: #FF9;
 
 @button_text_color: #DDD;
 
 @message_box_text_color: #765;
 @message_box_link_color: #66C;
 
-@highlight_color: #8C8;
-@selected_color: #F99;
+@highlight_color: #53a131;
+@selected_color: #FC6;
 
 @import "theme-base";
