--- a/site/resources/themes/steel.less
+++ b/site/resources/themes/steel.less
@@ -24,33 +24,33 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@lighter_body_color: #B22;
-@body_color: #800;
-@medium_body_color: darken(@body_color, 2%);
-@darker_body_color: #700;
-@darkest_body_color: #600;
+@lighter_body_color: #adc4e3;
+@body_color: #9AAECA;
+@medium_body_color: darken(@body_color, 4%);
+@darker_body_color: #8A9EBA;
+@darkest_body_color: #AABEDA;
 
-@light_border: #a66f6f;
-@medium_border: darken(@light_border, 15%);
-@dark_border: #6e0000;
+@light_border: #b2c5e0;
+@medium_border: darken(@light_border, 10%);
+@dark_border: #1A2E4A;
 
-@text_color: #EEE;
-@darker_text_color: #CBA;
-@darkest_text_color: #987;
+@text_color: #222;
+@darker_text_color: #1A2E4A;
+@darkest_text_color: #2c3a6a;
 
-@title_color: #d7302b;
-@lighter_title_color: #ee4d58;
+@title_color: #2d5080;
+@lighter_title_color: #3864a1;
 
-@link_color: #c2c274;
-@darker_link_color: darken(@link_color, 10%);
-@link_hover_color: #F99;
+@link_color: #FFD;
+@darker_link_color: #4A5E9A;
+@link_hover_color: yellow;
 
-@button_text_color: #DDD;
+@button_text_color: #444;
 
 @message_box_text_color: #765;
 @message_box_link_color: #66C;
 
-@highlight_color: #8C8;
-@selected_color: #F99;
+@highlight_color: #944e9d;
+@selected_color: #3f6578;
 
 @import "theme-base";
