--- a/site/resources/themes/sunshine.less
+++ b/site/resources/themes/sunshine.less
@@ -24,33 +24,33 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@lighter_body_color: #B22;
-@body_color: #800;
-@medium_body_color: darken(@body_color, 2%);
-@darker_body_color: #700;
-@darkest_body_color: #600;
+@lighter_body_color: lighten(@body_color, 5%);
+@body_color: #FFFF88;
+@medium_body_color: darken(@body_color, 5%);
+@darker_body_color: darken(@body_color, 10%);
+@darkest_body_color: darken(@body_color, 20%);
 
-@light_border: #a66f6f;
-@medium_border: darken(@light_border, 15%);
-@dark_border: #6e0000;
+@light_border: #666;
+@medium_border: darken(@light_border, 10%);
+@dark_border: darken(@light_border, 20%);
 
-@text_color: #EEE;
-@darker_text_color: #CBA;
-@darkest_text_color: #987;
+@text_color: #333;
+@darker_text_color: lighten(@text_color, 10%);
+@darkest_text_color: lighten(@text_color, 20%);
 
-@title_color: #d7302b;
-@lighter_title_color: #ee4d58;
+@title_color: #0044AA;
+@lighter_title_color: lighten(@title_color, 20%);
 
-@link_color: #c2c274;
+@link_color: #06C;
 @darker_link_color: darken(@link_color, 10%);
-@link_hover_color: #F99;
+@link_hover_color: #F60;
 
-@button_text_color: #DDD;
+@button_text_color: @darker_text_color;
 
 @message_box_text_color: #765;
 @message_box_link_color: #66C;
 
-@highlight_color: #8C8;
-@selected_color: #F99;
+@highlight_color: #F00;
+@selected_color: #99CC66;
 
 @import "theme-base";
