Converted ice theme to LESS

--- a/site/resources/themes/ice.less
+++ b/site/resources/themes/ice.less
@@ -23,27 +23,40 @@ For more information about the earthli WebCore, visit:
 http://www.earthli.com/software/webcore
 
 ****************************************************************************/
+
 a:link,
-a:visited {
+a:visited
+{
   color: #3477B1;
 }
+
 a:hover,
-a:active {
+a:active
+{
   color: #CC3333;
 }
-h2 {
+
+h2
+{
   border-bottom: 1px dotted #AAAAAA;
   color: #4A8CCA;
 }
-h3 {
+
+h3
+{
   color: #333333;
 }
-h4 {
+
+h4
+{
   color: #666;
 }
-.banner-title {
+
+.banner-title
+{
   color: #4A8CCA;
 }
+
 .nav-box,
 .top-box,
 .footer,
@@ -63,55 +76,83 @@ hr,
 .cell-selected,
 .cell-highlight,
 ul.menu,
-.menu-item:hover {
+.menu-item:hover
+{
   border-color: #4A8CCA;
 }
+
 .info-box-top,
 .info-box-bottom,
-.frame {
+.frame
+{
   border-color: #AAA;
 }
-.cell-highlight {
+
+
+.cell-highlight
+{
   background-color: #F4F4F4;
 }
-.cell-selected {
+
+.cell-selected
+{
   background-color: #DDEEFF;
 }
-.highlight {
+
+.highlight
+{
   color: #00AA00;
 }
-.description-box {
+
+.description-box
+{
   border-right-color: #4A8CCA;
 }
-.object-navigator .links {
+
+.object-navigator .links
+{
   column-rule-color: #4A8CCA;
   -webkit-column-rule-color: #4A8CCA;
   -moz-column-rule-color: #4A8CCA;
 }
-.quote-inline {
+
+.quote-inline
+{
   color: #777;
 }
+
 .chart-title,
-.preview-title {
+.preview-title
+{
   color: #0055BB;
 }
+
 .info-box-top a:link,
 .info-box-top a:visited,
 .info-box-bottom a:link,
-.info-box-bottom a:visited {
+.info-box-bottom a:visited
+{
   color: #74A7D1;
 }
-pre > code {
+
+pre > code
+{
   border-color: silver;
 }
-.button.selected {
+
+.button.selected
+{
   background-color: #4A8CCA;
   color: white;
 }
+
 .text-control,
-.menu-control {
+.menu-control
+{
   border-color: #999;
 }
-.menu-item-description {
+
+.menu-item-description
+{
   color: #333;
 }
